--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -909,3 +909,11 @@ wc cookie banner css.
 .empty {
   color: #a9a9a9;
 }
+
+.forward-active {
+  color: white;
+}
+
+.forward-inactive {
+  color: black;
+}
