--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-header.scss
@@ -47,52 +47,55 @@ $url-avatar: url('/img/avatar.png');
     font-size: 13px;
     line-height: 14px;
   }
-}
 
-.headerbox {
-  padding: 0;
-}
+  .headerbox {
+    padding: 0;
+  }
 
-span {
-  &.headerbox-logo {
-    padding: 3px 20px 0 30px;
-    border-right: 1px solid $headerbox-logo-border-color;
-    display: block;
-    margin-top: 10px;
+  span {
+    &.headerbox-logo {
+      padding: 3px 20px 0 30px;
+      border-right: 1px solid $headerbox-logo-border-color;
+      display: block;
+      margin-top: 10px;
+    }
+    &.headerbox-date {
+      padding: 10px 0 0 20px;
+      line-height: 17px;
+      display: block;
+    }
   }
-  &.headerbox-date {
-    padding: 10px 0 0 30px;
-    line-height: 17px;
-    display: block;
-  }
-}
 
-div {
-  &.headerbox-user {
-    font-size: 13px;
-    line-height: 16px;
-    padding: 10px 30px 0 0;
+  div {
+    &.headerbox-user {
+      font-size: 13px;
+      line-height: 16px;
+      padding: 10px 30px 0 0;
+    }
+    &.headerbox-avatar {
+      padding-right: 30px;
+      background: $url-avatar no-repeat 100% 50%;
+      height: 34px;
+    }
+    &.headerbox-user-profile {
+      padding-right: 44px;
+      font-size: 13px;
+      line-height: 18px;
+      text-align: left;
+    }
   }
-  &.headerbox-avatar {
-    padding-right: 30px;
-    background: $url-avatar no-repeat 100% 50%;
-    height: 34px;
-  }
-  &.headerbox-user-profile {
-    padding-right: 44px;
-    font-size: 13px;
-    line-height: 18px;
-    text-align: left;
-  }
-}
 
-.header {
   .otherLocations {
     font-size: 12px;
   }
+
   span.location {
     font-size: 14px;
     font-weight: bold;
+  }
+
+  .single-location {
+    line-height: 33px;
   }
 }
 
@@ -131,6 +134,12 @@ div {
   border-left: 1px solid $navbar-collapse-border-left-color;
   margin-right: 15px;
   margin-left: 15px;
+}
+
+.badge__stat {
+  background-color: $stat-circle-active-background-color;
+  border-color: $stat-circle-active-border-color;
+  color: $stat-circle-active-color;
 }
 
 .stat-circle {
