INTYG-3131: Visa vad som saknas borta och ersatt med felsummering i botten.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -273,6 +273,7 @@ $font-3: sans-serif;
   background-image: none;
   a {
     color: $alert-danger-color;
+    text-decoration: underline;
   }
 }
 
